--- a/case-server/src/main/resources/application-dev.properties
+++ b/case-server/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 # mysql配置
-spring.datasource.url=jdbc:mysql://127.0.0.1:3301/case_manager?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://192.168.88.31:3306/case_manager?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/case_manager?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+spring.datasource.username=conan
+spring.datasource.password=CoNan1234@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -27,7 +28,7 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 spring.mvc.static-path-pattern=/**
 # 配置本地图片文件保存目录
-web.upload-path=/Users/xx/Documents/
+web.upload-path=/data/${spring.application.name}/Documents/
 spring.resources.static-locations=classpath:/web/dist/,file:${web.upload-path}
 spring.thymeleaf.prefix=classpath:/web/dist/
 spring.thymeleaf.suffix=.html
